issue #69 and general layout bugs fixed

--- a/styles/components/newsletter.scss
+++ b/styles/components/newsletter.scss
@@ -47,6 +47,18 @@
     input:focus{
       outline:none;
     }
+    ::-webkit-input-placeholder{
+      color:#bab9b5;
+    }
+    ::-moz-placeholder{
+      color:#bab9b5;
+    }
+    :-moz-placeholder{
+      color:#bab9b5;
+    }
+    :-ms-input-placeholder{
+      color:#bab9b5;
+    }
   }
 }
 @media(max-width: 1100px) and (min-width: 700px){
