--- a/styles/pages/contact.scss
+++ b/styles/pages/contact.scss
@@ -1,7 +1,7 @@
 
 
 #contact-page{
-  max-width: 100vw;
+  // max-width: 100vw;
   background-color: $cloud;
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -15,7 +15,10 @@
 #contact-right-col{
   border-left: 2px solid $black;
   margin-bottom: $medium;
-
+  width: 50vw;
+  @media(max-width: 1100px){
+    border-left: 0px;
+  }
 }
 #contact-left-col{
   @media(max-width: 1100px){
@@ -25,8 +28,8 @@
   display: grid;
   grid-template-columns: 0.5fr 1.5fr;
   grid-template-rows: 1fr 1fr;
-  width: calc(50vw - 50px);
-  margin-left: $medium;
+  width: calc(50vw - 60px);
+  padding-left: $medium;
 
   .empty-div{
     grid-column: 1/2;
@@ -36,15 +39,17 @@
   }
 
   #contact-image-a{
-    width: calc(50vw - 50px);
+    width: calc(50vw - 60px);
+    padding-right: 10px;
     grid-row: 1/2;
     grid-column: 1/3;
     align-self: start;
     z-index: 5;
+    
   }
 
   #contact-image-b{
-    width: calc(37.5vw - 50px);
+    width: calc(37.5vw - 60px);
     grid-row: 2/3;
     grid-column: 2/3;
     align-self: center;
@@ -182,7 +187,7 @@
     }
 
     label{
-      color: $grey;
+      color: #bab9b5;
       font-size: $type_1;
       display: flex;
       order: 1;
@@ -258,12 +263,28 @@
         line-height: $mobile_line1;
         border-radius: 0;
       }
+    
     }
+    input::-webkit-input-placeholder{
+      color:#bab9b5;
+    }
+    input::-moz-placeholder{
+      color:#bab9b5;
+    }
+    input:-moz-placeholder{
+      color:#bab9b5;
+    }
+    input:-ms-input-placeholder{
+      color:#bab9b5;
+    }
+
+
     input:focus{
       outline: none;
       border-bottom: 2px solid $black;
     }
     textarea{
+      padding-top: $xsmall;
       font-family: 'Lausanne';
       background-color: $cloud;
       border-top-style: hidden;
@@ -271,7 +292,7 @@
       border-left-style: hidden;
       border-bottom: 1px solid $grey;
       resize: none;
-      height: 30vh;
+      height: 350px;
       font-size: $type_1;
       @media(max-width:1100px){
         height: 40vh;
@@ -287,10 +308,23 @@
       outline: none;
       border-bottom: 2px solid $black;
     }
+
+    textarea::-webkit-input-placeholder{
+      color:#bab9b5;
+    }
+    textarea::-moz-placeholder{
+      color:#bab9b5;
+    }
+    textarea:-moz-placeholder{
+      color:#bab9b5;
+    }
+    textarea:-ms-input-placeholder{
+      color:#bab9b5;
+    }
   }
   button{
     cursor: pointer;
-    margin-top: 150px;
+    margin-top: $medium;
     -webkit-appearance: none;
     -moz-appearance: none;
     border: 0px;
@@ -316,6 +350,12 @@
     width: calc(100vw - 50px);
     margin-left: $small; 
     margin-right: $small;
+  }
+
+
+  .add-comments-section{
+    display: flex;
+    flex-direction: column;
   }
 }
 
@@ -354,7 +394,12 @@
     flex-direction: row;
     @media(max-width: 1100px) and (min-width: 700px){
       width: calc(100vw - 196px) !important;
-      height: 65px;
+      .radio-box{
+        height: 80px;
+          label{
+            padding-top: 30px !important;
+          }
+      }
     }
 
     .radio-box:hover{
@@ -372,15 +417,18 @@
 
     .radio-box{
       width: 100%;
+      height: 80px;
       border-top: 1px solid $grey;
       border-left: 1px solid $grey;
       border-bottom: 1px solid $grey;
-      font-size: $mobile_type1 !important;
+      // font-size: $mobile_type1 !important;
       display: flex;
       justify-content: flex-start ;
  
     input[type=radio]{
       opacity: 0;
+      width: 0px;
+      margin: 0px;
     }
 
     input[type=radio]:focus + label{
@@ -390,6 +438,12 @@
     input[type=radio]:checked + label{
       color: $black;
     }
+      label{
+        font-size: $type_3;
+        padding-left: $xsmall;
+        padding-top: 50px;
+        cursor: pointer;
+      }
     }
 
 
@@ -455,7 +509,7 @@
   }
   select{
     height: 50px;
-    min-width: 100%;
+    // min-width: 100%;
     -moz-appearance: none;
     -webkit-appearance: none;
     appearance: none;
